# mdlp

./: .gitignore  .gitmodules  BinDisc.cpp  BinDisc.h  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CMakeUserPresets.json  CONAN_README.md  CPPFImdlp.cpp  CPPFImdlp.h  Discretizer.cpp  Discretizer.h  Makefile  Metrics.cpp  Metrics.h  README.md  RELEASE_PLAN_V3.md  TECHNICAL_ANALYSIS_REPORT.md  conandata.yml  conanfile.py  feature0  fimdlpConfig.cmake.in  getversion.py  sonar-project.properties  typesFImdlp.h  update_coverage.py
.conan/profiles/: default
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build.yml
build_conan/: CMakeCache.txt
config/: config.h.in
sample/: ArffFiles.cpp  CMakeLists.txt  sample.cpp  test.cpp
sample/tests/: 01.arff  02.arff  03.arff
scripts/: build_conan.sh  create_package.sh
src/: BinDisc.cpp  BinDisc.h  CPPFImdlp.cpp  CPPFImdlp.h  Discretizer.cpp  Discretizer.h  Metrics.cpp  Metrics.h  PKIDisc.cpp  PKIDisc.h  typesFImdlp.h
test_consumer/: CMakeLists.txt  conanfile.txt  test_fimdlp.cpp
test_package/: CMakeLists.txt  CMakeUserPresets.json  conanfile.py
test_package/src/: test_fimdlp.cpp
tests/: ArffFiles.cpp  ArffFiles.h  BinDisc_unittest.cpp  CMakeLists.txt  Discretizer_unittest.cpp  Experiments.hpp  FImdlp_unittest.cpp  Metrics_unittest.cpp  PKIDisc_unittest.cpp  k  k.cpp  t  t.cpp  test  testKbins.py  tests_do.py  tests_generate.ipynb
tests/datasets/: glass.arff  heart-statlog.arff  test.arff  tests.txt
